<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




<androidx.cardview.widget.CardView
        android:id="@+id/Avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/rectangle_6_7"
            android:contentDescription="@string/pic1" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="520dp">

            <LinearLayout
                android:id="@+id/LinerLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="36dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/LinerLayout1"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="12dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    app:cardCornerRadius="50dp">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:background="#85EB7D"
                        android:backgroundTint="#85EB7D"
                        android:text="@string/follow"
                        android:textColor="#455A64"
                        app:layout_constraintEnd_toStartOf="@+id/button2"
                        tools:ignore="TouchTargetSizeCheck" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="30dp">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/white"
                        android:text="@string/invite"
                        android:textColor="#80000000" />

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="60dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/LinerLayout2"
                app:layout_constraintTop_toBottomOf="@+id/LinerLayout1">

                <Button
                    android:layout_width="110dp"
                    android:layout_height="30dp"
                    android:background="#8085EB7D"
                    android:backgroundTint="#85EB7D"
                    android:text="@string/invited_by_maryk"
                    android:textColor="#266528"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toStartOf="@+id/button2" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/LinerLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/_2"
                        android:textColor="#85EB7D"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView"
                        app:layout_constraintEnd_toStartOf="@+id/textView5"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/pods"
                        app:layout_constraintEnd_toEndOf="@+id/textView4"
                        app:layout_constraintStart_toStartOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:text="@string/_48"
                        android:textColor="#85EB7D"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView2"
                        app:layout_constraintEnd_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toTopOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/following"
                        app:layout_constraintBottom_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="@+id/textView5"
                        app:layout_constraintStart_toStartOf="@+id/textView5"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/_5"
                        android:textColor="#85EB7D"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="@+id/textView5"
                        tools:layout_editor_absoluteX="159dp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/followers"
                        app:layout_constraintBottom_toBottomOf="@+id/textView2"
                        app:layout_constraintEnd_toEndOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinerLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LinerLayout1">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/john_doe"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/john_doe_2"
                    android:textColor="#99000000"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginBottom="8dp"
                    android:text="@string/site_com"
                    android:textColor="@color/purple_700"
                    app:layout_constraintBottom_toTopOf="@+id/textView10" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LinerLayout2">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="29dp"
                    android:layout_height="23dp"
                    android:text="@string/bio"
                    android:textColor="#009EFD"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toStartOf="@+id/textView12" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="264dp"
                    android:layout_height="58dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/descrip"
                    app:layout_constraintEnd_toStartOf="@+id/button5"
                    app:layout_constraintStart_toEndOf="@+id/textView11" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="55dp"
                    android:layout_height="59dp"
                    android:text="@string/button1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="157dp"
                android:layout_height="45dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/LinerLayout1"
                app:layout_constraintTop_toBottomOf="@id/LinerLayout3">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="72dp"
                    android:layout_height="23dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/reputation"
                    android:textColor="#009EFD"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="32dp"
                    android:layout_height="21dp"
                    android:text="@string/_120"
                    app:layout_constraintEnd_toStartOf="@+id/button4" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:text="@string/button2"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout2">

                <Button
                    android:id="@+id/pods"
                    android:layout_width="136dp"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:text="@string/pods2"
                    android:textColor="#1976D2" />

                <Button
                    android:id="@+id/about"
                    android:layout_width="136dp"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:text="@string/about"
                    android:textColor="#919191" />

                <Button
                    android:id="@+id/groups"
                    android:layout_width="135dp"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:text="@string/groups"
                    android:textColor="#919191" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout3">
                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/opisanie"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView14"
                    app:srcCompat="@drawable/rectangle" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="509dp"
        android:layout_height="288dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_2_3" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>
